# BlueLink

./: .gitignore  AFUToHostStream.bsv  AFUToHostStream512.bsv  BLProgrammableLUT.bsv  BlueLinkConfig.cmake.in  BluespecConfig.cmake  CAPIOptions.bsv  CAPIStream.bsv  CMakeLists.txt  CmdBuf.bsv  CmdCounter.bsv  Common.bsv  Endian.bsv  FindBlueLink.cmake  FindBluespec.cmake  FindCAPI.cmake  FindModelsim.cmake  FindVSIM.cmake  HostToAFUBulk.bsv  HostToAFUStream.bsv  LICENSE  MLAB_0l.v  Makefile  ProgrammableLUT.bsv  README.md  ReadBuf.bsv  ResourceManager.bsv  ShiftReg.bsv  ShiftRegUnfunnel.bsv  SynthesisOptions.bsv  TagManager.bsv  Test_AFUToHostStream.bsv  Test_AFUToHostStream512.bsv  Test_HostToAFUBulk.bsv  Test_HostToAFUStream.bsv  Test_ReadBuf.bsv  Test_RefRefHostStream.bsv  WriteBuf.bsv  afu2host  afu2host.cpp  (+19 more)
Altera/: .gitignore  AlteraM20k.bsv  BLProgrammableLUT.bsv  BRAM2.Fixed.v  BRAM2.Stall.v  BRAMStall.bsv  CMakeLists.txt  MLAB_0l.v  Makefile  MemScanChain.bsv  MemTest.cpp  ProgrammableLUT.bsv  Test_BRAM2Stall.bsv  Testing.bsv
CommandInterface/: CMakeLists.txt  ResourceManager.bsv
Core/: .gitignore  AFU.bsv  AFUHardware.bsv  AFUShims.bsv  CMakeLists.txt  ClientServerU.bsv  Endianness.bsv  Makefile  PSL.bsv  PSLCommands.enum  PSLControlCommands.enum  PSLInterface.bsv  PSLJobOpcodes.enum  PSLParity.bsv  PSLResponseCodes.enum  PSLTranslationOrderings.enum  PSLTypes.bsv  Parity.bsv  SnoopConnection.bsv  make_bsv_enum.pl
Core/Test/: Makefile  Test_Parity.bsv
DedicatedAFU/: BlockMapAFU.bsv  BlockMapPassthrough.bsv  CMakeLists.txt  DedicatedAFU.bsv  Makefile
Examples/: CMakeLists.txt
Examples/Endian/: CMakeLists.txt  Endian.bsv  Endian.cpp  Makefile  Options.txt  makeUnion.tcl  test_Endian.tcl
Examples/MemLoad/: .gitignore  250m_400ps_slack.sdc  Makefile  MemLoad.bsv  MemLoadHost.cpp  mmMulticycle.sdc  pslse.parms  test.tcl
Examples/Memcopy/: AFU.hpp  CMakeLists.txt  Makefile  Memcopy.bsv  README.md  Test_Memcopy.bsv  WED.hpp  host_memcopy.cpp  memcopy_mambo.tcl  memcopy_systemsim.tcl  memcopy_vsim.tcl  p8memcpy.sh  sim.sh
Examples/Memcopy2/: .gitignore  CMakeLists.txt  Makefile  Memcopy2.bsv  Memcopy2.cpp  host_memcopy2.cpp  test_Memcopy2.tcl
Examples/MemcopyStream/: CMakeLists.txt  MemcopyStream.bsv  host_memcopystream.cpp
Host/: AFU.cpp  AFU.hpp  BlockMapAFU.hpp  BlockMapAFUBase.cpp  BlockMapAFUBase.hpp  CMakeLists.txt  WED.hpp  aligned_allocator.hpp
MMIO/: CMakeLists.txt  MMIO.bsv  MMIOConfig.bsv  Makefile
MemScanChain/: BDPIDevice.bsv  BDPIDevice.cpp  BDPIDevice.hpp  BDPIDeviceFactory.cpp  BDPIDeviceFactory.hpp  BDPIDeviceFactoryRegistry.cpp  BDPIDeviceFactoryRegistry.hpp  BDPIDeviceTest.bsv  BDPIPort.bsv  BDPIPort.cpp  BDPIPort.hpp  BDPIPortWrapper.hpp  BRAMBank.bsv  BRAMStall.bsv  BlockRAMGroupTest.cpp  CMakeLists.txt  MemScanChain.bsv  MemScanChainTest.cpp  MemTest.cpp  Singleton.hpp  Test_AlteraM20k.bsv  Test_AlteraM20kMux.bsv  Test_BRAMGroup.bsv  Test_BRAMGroup_CAPI.bsv  Test_BasicStall.bsv  Test_MemScanChain.bsv  Ticker.bsv  Ticker.cpp  pslse.parms
PSLVerilog/: LICENSE  psl_sim.v  psl_sim_wrapper.v  psl_syn_wrapper.v  pslse_top.v  reset_wrapper.v  revwrap.v  top.v
Stream/: CMakeLists.txt  CmdArbiter.bsv  CmdTagManager.bsv  ReadStream.bsv  Stream.bsv  WriteStream.bsv
Support/: CMakeLists.txt  CreditIfc.bsv  Test_CreditIfc.bsv
old/: AFUToHostStream512.bsv  HostToAFUBulk.bsv  HostToAFUStream.bsv  ReadBuf.bsv  ResourceManager.bsv  Test_AFUToHostStream.bsv  Test_AFUToHostStream512.bsv  Test_CmdBuf.bsv  Test_HostToAFUStream.bsv  Test_WriteBuf.bsv  WriteBuf.bsv  afu2host.cpp  capi_env.tcl  capi_sim.tcl  test_afu2host512.tcl  test_host2afu.tcl
synthesis/: assemble.tcl  clk250m.sdc  make_rbf.sh  rpt.tcl  sta.tcl  synthesize.tcl
