PROJECT(BlueLink)

CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

## C++ options
#SET(CMAKE_CXX_STANDARD 11)
ADD_DEFINITIONS(-std=c++11)


## Unit tests
SET(TESTING ON CACHE BOOL "Build unit tests")
IF(TESTING)
	ENABLE_TESTING()
ENDIF()

FIND_PACKAGE(Bluespec)

#FIND_PACKAGE(MODELSIM)


ADD_SUBDIRECTORY(Altera)
ADD_SUBDIRECTORY(MemScanChain)
