FIND_PACKAGE(Perl REQUIRED)

FUNCTION(ADD_ENUM_PACKAGE ENUMPREFIX)
    ADD_CUSTOM_COMMAND(
        COMMAND ${PERL_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/make_bsv_enum.pl ${ENUMPREFIX} ${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_BINARY_DIR}
        WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
        OUTPUT ${CMAKE_CURRENT_BINARY_DIR}/${ENUMPREFIX}s.bsv
        DEPENDS make_bsv_enum.pl ${ENUMPREFIX}s.enum
        )

    ADD_GENERATED_BSV_PACKAGE(${ENUMPREFIX}s)
ENDFUNCTION()

ADD_BSV_PACKAGE(PSLTypes Parity ClientServerU Endianness PSLCommands PSLJobOpcodes PSLControlCommands PSLResponseCodes PSLTranslationOrderings)

FOREACH(PKG PSLTranslationOrdering PSLControlCommand PSLJobOpcode PSLCommand PSLResponseCode)
    MESSAGE("Adding enum package ${PKG}")
    ADD_ENUM_PACKAGE(${PKG})
    ADD_DEPENDENCIES(PSLTypes ${PKG}s)
ENDFOREACH()


ADD_BSV_PACKAGE(AFU PSLTypes)
ADD_BSV_PACKAGE(AFUHardware AFU PSLTypes)
ADD_BSV_PACKAGE(Endianness)
ADD_BSV_PACKAGE(Parity)
ADD_BSV_PACKAGE(ClientServerU)
ADD_BSV_PACKAGE(AFUShims PSLTypes)

ADD_CUSTOM_TARGET(Core ALL DEPENDS PSLTypes AFU AFUHardware Endianness Parity)
